<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".ui.PinActivity">

    <ImageView
        android:id="@+id/ivBak"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_to_your_gym"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBak" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/pin"
        app:layout_constraintTop_toBottomOf="@id/tvScreenTitle"
        app:placeholderText="- - - -">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#CAC7F1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPin" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@drawable/gym_coach_trainer_fitness_512"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>