<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:id="@+id/llMembers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/home_tab_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".45">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/family_tree_members_people_512" />

        <TextView
            android:id="@+id/labelMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/members"
            android:textSize="16sp" />

       />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSignature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/home_tab_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".45">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/gym_coach_trainer_fitness_512" />

        <TextView
            android:id="@+id/labelTrainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/sig"
            android:textSize="16sp" />
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbackup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/home_tab_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:layout_constraintWidth_percent=".45">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/increase_presentation_profit_growth_512" />

        <TextView
            android:id="@+id/labelBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/backup"
            android:textSize="16sp" />
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>