<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlmain"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_container"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="Name :-"
                        android:textStyle="bold"
                        android:textSize="20dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lldate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/joindate"
                        android:textStyle="bold"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="Date :- "
                        android:textSize="20dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etjoindate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false" />

                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signature_text1"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/signature_text2"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/signature_text3"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/signature_text4"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </ScrollView>


            />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signature_pad"
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                app:penMinWidth="5dp" />

            />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="clear_pad" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="save_signature" />
    </LinearLayout>

</RelativeLayout>